Fixed height pane 2 rows: hover overflow

--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -144,7 +144,7 @@ table#reportData tr.rowa td {
 
 .in_cell:hover {
 	overflow:visible;
-	text-shadow: white 0px 0px 10px;
+	text-shadow: 0px 0px 1em white;
 }
 
 table#reportData tr.rowb  { 
